--- a/DotNet.Bentley/AddInManager/AddinManager (CE)/AddinManager (CE).csproj
+++ b/DotNet.Bentley/AddInManager/AddinManager (CE)/AddinManager (CE).csproj
@@ -38,12 +38,6 @@
       <HintPath>D:\Program Files\Bentley\MicroStation CONNECT Edition\MicroStation\Assemblies\Bentley.MicroStation.Interfaces.1.0.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DotNet.Attribute">
-      <HintPath>..\packs\DotNet.Attribute.dll</HintPath>
-    </Reference>
-    <Reference Include="DotNet.Json">
-      <HintPath>..\packs\DotNet.Json.dll</HintPath>
-    </Reference>
     <Reference Include="DotNet.MVVM, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packs\DotNet.MVVM\net45\DotNet.MVVM.dll</HintPath>
@@ -55,6 +49,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
