--- a/DotNet.Bentley/AddInManager/AddinManager (V8i)/AddinManager (V8i).csproj
+++ b/DotNet.Bentley/AddInManager/AddinManager (V8i)/AddinManager (V8i).csproj
@@ -38,12 +38,6 @@
       <HintPath>D:\Program Files (x86)\Bentley\MicroStation V8i (SELECTseries)\MicroStation\mdlapps\bentley.microstation.interfaces.1.0.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DotNet.Attribute">
-      <HintPath>..\packs\DotNet.Attribute.dll</HintPath>
-    </Reference>
-    <Reference Include="DotNet.Json">
-      <HintPath>..\packs\DotNet.Json.dll</HintPath>
-    </Reference>
     <Reference Include="DotNet.MVVM">
       <HintPath>..\packs\DotNet.MVVM\net35\DotNet.MVVM.dll</HintPath>
     </Reference>
@@ -54,6 +48,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packs\DotNet.MVVM\net35\System.Windows.Interactivity.dll</HintPath>
